--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -47,5 +47,5 @@ InitialAverageFrameRate=0.016667
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Main.Main
 GameDefaultMap=/Game/Main.Main
-GlobalDefaultGameMode=/Game/Blueprints/BP_Gamemode.BP_Gamemode_C
+GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
 
