--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,6 +6,11 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Levels/Mainn.Mainn
+GameDefaultMap=/Game/Levels/Mainn.Mainn
+GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -43,9 +48,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Main.Main
-GameDefaultMap=/Game/Main.Main
-GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
-
