Enemies Logic and Placement

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,6 +11,9 @@ EditorStartupMap=/Game/Levels/Mainn.Mainn
 GameDefaultMap=/Game/Levels/Mainn.Mainn
 GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
